Part 1/log/build_2025-04-22_12-11-13/turtle_regulation/stderr.log
  File "/home/info/ros2_ws/install/turtle_regulation/lib/python3.12/site-packages/turtle_regulation/set_way_point.py", line 1
    mport rclpy
          ^^^^^
SyntaxError: invalid syntax

